feat: 增加三种用户录入租户的方式
